apollo-router-core/src/services/query_parse/snapshots/apollo_router_core__services__query_parse__tests__complex_path_graphql_representation.snap
---
source: apollo-router-core/src/services/query_parse/tests.rs
expression: graphql_error
---
message: "GraphQL parsing failed: Invalid field selection"
locations:
  - line: 1
    column: 41
  - line: 2
    column: 5
path:
  - user
  - profile
  - 0
  - settings
  - theme
extensions:
  code: APOLLO_ROUTER_QUERY_PARSE_SYNTAX_ERROR
  timestamp: "[timestamp]"
  service: query-parser
  details:
    errorType: PARSE_ERROR
    hasSourceCode: true
    parseMessage: Invalid field selection
