apollo-router-core/src/services/query_parse/snapshots/apollo_router_core__services__query_parse__tests__invalid_query_type_graphql_representation.snap
---
source: apollo-router-core/src/services/query_parse/tests.rs
expression: graphql_error
---
message: "Invalid query format: Expected string, found number"
extensions:
  code: APOLLO_ROUTER_QUERY_PARSE_INVALID_FORMAT
  timestamp: "[timestamp]"
  service: apollo-router
  details:
    actualType: number
    errorType: INVALID_QUERY
    invalidReason: "Expected string, found number"
    isEmpty: false
