apollo-router-core/src/services/query_parse/snapshots/apollo_router_core__services__query_parse__tests__json_extraction_error_graphql_representation.snap
---
source: apollo-router-core/src/services/query_parse/tests.rs
expression: graphql_error
---
message: "JSON extraction failed: Failed to parse JSON: unexpected end of input"
extensions:
  code: APOLLO_ROUTER_QUERY_PARSE_JSON_EXTRACTION_ERROR
  timestamp: "[timestamp]"
  service: apollo-router
  details:
    errorType: JSON_EXTRACTION
    extractionDetails: "Failed to parse JSON: unexpected end of input"
