apollo-router-core/src/services/query_parse/snapshots/apollo_router_core__services__query_parse__tests__minimal_error_graphql_representation.snap
---
source: apollo-router-core/src/services/query_parse/tests.rs
expression: graphql_error
---
message: "GraphQL parsing failed: Syntax error"
extensions:
  code: APOLLO_ROUTER_QUERY_PARSE_SYNTAX_ERROR
  timestamp: "[timestamp]"
  service: apollo-router
  details:
    errorType: PARSE_ERROR
    hasSourceCode: false
    parseMessage: Syntax error
