apollo-router-core/src/services/query_parse/snapshots/apollo_router_core__services__query_parse__tests__parse_error_with_context_graphql_representation.snap
---
source: apollo-router-core/src/services/query_parse/tests.rs
expression: graphql_error
---
message: "GraphQL parsing failed: Missing closing brace"
locations:
  - line: 1
    column: 34
path:
  - query
  - user
extensions:
  code: APOLLO_ROUTER_QUERY_PARSE_SYNTAX_ERROR
  timestamp: "[timestamp]"
  service: query-parser
  traceId: trace-123
  requestId: req-456
  details:
    errorType: PARSE_ERROR
    hasSourceCode: true
    parseMessage: Missing closing brace
