apollo-router-core/src/services/query_parse/snapshots/apollo_router_core__services__query_parse__tests__schema_validation_error_graphql_representation.snap
---
source: apollo-router-core/src/services/query_parse/tests.rs
expression: graphql_error
---
message: "Schema validation failed: Field 'posts' not found on type 'User'"
locations:
  - line: 3
    column: 17
path:
  - user
  - posts
extensions:
  code: APOLLO_ROUTER_QUERY_PARSE_SCHEMA_VALIDATION_ERROR
  timestamp: "[timestamp]"
  service: schema-validator
  traceId: trace-789
  details:
    errorType: SCHEMA_VALIDATION
    operationType: query
    validationReason: "Field 'posts' not found on type 'User'"
